--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "graphql": "^16.11.0",
+    "graphql-redis-subscriptions": "^2.7.0",
     "graphql-tools": "^9.0.18",
+    "graphql-ws": "^6.0.5",
     "ioredis": "^5.6.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
