--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql-tools": "^9.0.18",
     "graphql-ws": "^6.0.5",
     "ioredis": "^5.6.1",
+    "openai": "^5.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
