--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,32 @@
 services:
-  redis:
-    image: redis
-    container_name: redis
-    ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
-    volumes:
-      - redis_data:/data
-    networks:
-      - backend
+    redis:
+        image: redis
+        container_name: redis
+        ports:
+            - '${REDIS_PORT}:${REDIS_PORT}'
+        volumes:
+            - redis_data:/data
+        networks:
+            - backend
 
-  postgres:
-    image: postgres
-    container_name: postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - backend
+    postgres:
+        image: postgres
+        container_name: postgres
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        ports:
+            - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+        volumes:
+            - postgres_data:/var/lib/postgresql/data
+        networks:
+            - backend
 
 volumes:
-  redis_data:
-  postgres_data:
+    redis_data:
+    postgres_data:
 
 networks:
-  backend:
-    driver: bridge
+    backend:
+        driver: bridge
