--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"bullmq": "^5.53.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
+		"cookie-parser": "^1.4.7",
 		"graphql": "^16.11.0",
 		"graphql-redis-subscriptions": "^2.7.0",
 		"graphql-tools": "^9.0.18",
@@ -55,9 +56,11 @@
 		"@nestjs/testing": "^11.0.1",
 		"@swc/cli": "^0.6.0",
 		"@swc/core": "^1.10.7",
+		"@types/cookie-parser": "^1.4.9",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
+		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
